# ram-memory-simulator

./: CMakeLists.txt  README.md
include/: command.h  input.h  memory.h  user.h
src/: input.c  main.c  memory.c  user.c
